Fixed broken homepage link

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "sergiosantos96.github.io/Portfolio-Website",
+  "homepage": "https://sergiosantos96.github.io/Portfolio-Website",
   "name": "portfolio-website",
   "private": true,
   "version": "0.0.0",
