--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sergiosantos96.github.io/Portfolio-Website",
+  "homepage": "http://sergiosantos96.github.io/Portfolio-Website",
   "name": "portfolio-website",
   "private": true,
   "version": "0.0.0",
@@ -9,7 +9,8 @@
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "predeploy": "npm run build", "deploy": "gh-pages -d build"
+    "predeploy": "npm run build", 
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "gh-pages": "^5.0.0",
